# liquid-voice-agent

./: .gitignore  PHASE1_IMPLEMENTATION.md  PHASE1_REVIEW.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PROJECT_PLAN.md  README.md  pyproject.toml  situations.json
scripts/: populate_pinecone.py
src/: __init__.py  audio_player.py  audio_recorder.py  client.py  context.py  detector.py  embeddings.py  file_manager.py  formatter.py  modal_app.py  pinecone_client.py  principle_scorer.py  selector.py  server.py  test_pipeline.py  test_recording.py
streamlit_app/: app.py
streamlit_app/components/: debug_panel.py
